testsuite/tests/ghci/should_run/T15806.script
:set -XRankNTypes
:k (Maybe Int)
:k (Maybe (forall a. a -> a))